--- a/src/paper/results_paper.Rmd
+++ b/src/paper/results_paper.Rmd
@@ -2,7 +2,9 @@
 title: "results_paper"
 author: "DPREP Team 16"
 date: "17/10/2021"
-output: pdf_document
+output: 
+  pdf_document: 
+    fig_caption: yes
 ---
 
 ```{r setup, include=FALSE}
@@ -15,11 +17,12 @@ library(gapminder)
 library(knitr)
 library(recommenderlab)
 library(RColorBrewer)
+library(gridExtra)
 ```
 
 ## **Results linear regression**
 
-To create the linear model, the cleaned dataset is loaded into the R script. Then, a linear model is made by using the price as the dependent variable, the regulation as the independent variable and then the different neighborhoods and roomtypes are added as covariates, as well as the other three dummy's: host_since_dummy, superhost_dummy and identity_verified_dummy. For a more elaborate explanation on these variables, please read the paper in the sourcecode datapreparation folder.
+To create the linear model, the cleaned dataset is loaded into the R script. Then, a linear model is made by using the price as the dependent variable, the regulation as the independent variable and then the different neighborhoods and room types are added as covariates, as well as the other three dummy's: host_since_dummy, superhost_dummy and identity_verified_dummy. For a more elaborate explanation on these variables, please read the paper in the source code datapreparation folder.
 
 When running this regression, the results are as follows: 
 ```{r}
@@ -32,13 +35,17 @@ Here, it is directly noticeable that regulation has a significant, positive infl
 *Note that for example, not all neighborhoods and room_type have a significant influence on the price. However, to draw the conclusion that being in a specific neighborhood and having a specific room type to offer has a significant impact on the price, having one significant dummy is already enough, as this shows that at least one neighborhood or room type is significant for the price.* 
 
 ## **Data visualization**
+
 ### **Data retrieval plots**
+
 To obtain the data for all the plots created, several files were created for the specific plots. 
 
 #### **General barplot**
+
 First, a general barplot will be made, which will just show the increase in price before and after te regulation. This result will be shared in the Github Readme, as it is the most concise conclusion. 
 
 The following code is used for the general barplot. The results of this data are written to a csv file to make the data easily accessible in other files.
+
 ```{r}
 # --- Load Data --- #
 all_data <- read.csv(file = '../../gen/data-preparation/output/cleaned_data.csv')
@@ -53,6 +60,7 @@ write.csv(regulation_price, "../../gen/analysis/input/data_for_barplot.csv", row
 ```
 
 ####**Neighborhood plot**
+
 Next, also a barplot containing the price difference per neighborhood is included. The structure of this data retrieval code is a bit more complex, as the data has to be pivoted into a long format first. In the end, a dataset containing the neighborhoods and the regulation, summarized by the means, has been created. This dataset is once again written to a csv file. 
 
 ```{r}
@@ -81,9 +89,13 @@ neighborhoods_price_long <- neighborhoods_long %>%
   summarise(price = mean(price))
 
 write.csv(neighborhoods_price_long, "../../gen/analysis/input/data_for_plot_neighborhoods.csv", row.names = FALSE)
+
 ```
+
 #### **Room type plot**
+
 Last, we also include a plot that visualizes the difference in prices before and after the regulation for the room types. The retrieval of the data has been done in a similar way. 
+
 
 ```{r}
 # --- Load Data --- #
@@ -101,7 +113,9 @@ write.csv(roomtype_price, "../../gen/analysis/input/data_for_roomtype_plot.csv",
 
 
 ## **Barplots**
+
 ### **Barplot general prices**
+
 The following plot has been made based on the data retrieved. This plot visually represents the mean price increase before and after the regulation. 
 
 ```{r, echo=FALSE}
@@ -120,7 +134,9 @@ regulation_price %>%
   scale_fill_discrete(labels = c("Before Regulation", "After Regulation")) + geom_col()
 ```
 ### **Barplot neighborhoods**
+
 The results of the barplot of the neighborhoodslook like this:
+
 ```{r, echo=FALSE}
 # --- Load Data --- #
 neighborhoods_price <- read.csv(file = '../../gen/analysis/input/data_for_plot_neighborhoods.csv')
@@ -141,8 +157,10 @@ neighborhoods_price_long %>%
 You can see that the prices in the Old Town of Toronto are affected most by the regulation. Except for Etobicoke and North York prices go up slightly, but not such a large difference as for Old Town. This does make sense, as Old Town is the most important neighborhood for tourists and thus, prices are more sensitive. 
 
 ### **Barplot room types**
-Last, a barplot for the room types also has been created. 
-```{r, echo=FALSE}
+
+A barplot for the room types also has been created. 
+
+```{r, }
 # --- Load Data --- #
 roomtype_price <- read.csv(file = '../../gen/analysis/input/data_for_roomtype_plot.csv')
 
@@ -159,7 +177,32 @@ roomtype_price %>%
   theme_minimal() + scale_fill_discrete(labels = c("Before Regulation", "After Regulation"))
 
 ```
+
 The barplot shows that for every room type, except hotel room, prices increase after the regulation. That does make sense, because the regulation mainly effects the entire homes or apartments, or the private/shared rooms within someones house.
+
+### **Table dummies**
+
+Lastly, a table for the dummy variables has been created. Instead of a barplot, we chose for a table, since we believe that a table can more clearly represent the differences in the price for the host dummy variables. In this table, the identity_verified_dummy has not been included, as this dummy proved no significant impact on the price. 
+
+```{r}
+# --- Load Data --- #
+host_data <- read.csv(file = '../../gen/data-preparation/output/cleaned_data.csv')
+
+# --- Table 1 --- #
+
+# Make dataset
+host_price <- host_data %>%
+  group_by(host_since_dummy, superhost_dummy, regulation) %>%
+  summarise(price = mean(price)) 
+
+# Remove irrelevant columns 
+host_price <- host_price[-c(1:2, 7:8),]
+
+gridExtra::grid.table(host_price)
+```
+<a href="https://lh3.googleusercontent.com/74zeTQEd_crDKRmats6z6fsx2f_wHcZTHnzkT5EV5p_0OdwBGd4BnM8tBBZfVgyrOkdrY19FlqKIG3llpHMbDSxI3ng6muH0jRASMNCfHrVe7GzQCv9XhWDQ91pyAYHvigANxJo=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/74zeTQEd_crDKRmats6z6fsx2f_wHcZTHnzkT5EV5p_0OdwBGd4BnM8tBBZfVgyrOkdrY19FlqKIG3llpHMbDSxI3ng6muH0jRASMNCfHrVe7GzQCv9XhWDQ91pyAYHvigANxJo=w600-h315-p-k" /> </a> 
+
+As shown in the table, prices go up for both the host_since_dummy and superhost_dummy. If calculated in percentages, that is 8.6% and 6.6% for host_since_dummy and superhost_dummy respectively. 
 
 ## **Overall conclusion**
 By means of this linear regression and the barplots, it can be concluded that the regulation definitely has had its effect on the listing price of AirBnB's. The regulation was not the only significant influence for the price increase, however, the effects of the regulation and the other significant impacts on the increase in price can be related to each other, as explained earlier. Therefore, it can be concluded that this regulation definitely played a role in the increase in the prices. However, the linear regression model only explains 2.7% of the total variance. Other researchers can build further on this report to find out what caused the other variance in price. The influence of COVID-19 can be a very interesting angle to look at this data. 
